syntax = "proto3";

option go_package = "github.com/anatolio-deb/picovpnd/picovpnd";
package helloworld;

service OpenConnectService {
  rpc UserAdd (UserAddRequest) returns (Response) {}
  rpc UserLock (UserLockRequest) returns (Response) {}
  rpc UserUnlock (UserUnlockRequest) returns (Response) {}
  rpc UserDelete (UserDeleteRequest) returns (Response) {}
  rpc UserChangePassword (UserChangePasswordRequest) returns (Response) {}
}

message UserAddRequest {
  string username = 1;
  string password = 2;
}

message Response {
  string error = 1;
}

message UserLockRequest {
  string username = 1;
}

message UserUnlockRequest {
  string username = 1;
}

message UserDeleteRequest {
  string username = 1;
}

message UserChangePasswordRequest {
  string username = 1;
  string password = 2;
}
